<resources>
    <string name="marks">Marcadores</string>
    <string name="mark">Marcador</string>
    <string name="no_marks">No hay marcadores guardados</string>
    <string name="share">Compartir</string>
    <string name="del_mark">Marcador eliminado</string>
    <string name="reload">Recargar</string>
    <string name="engine_search">Motor de Búsqueda:</string>
    <string name="user_agent">Agente de Usuario:</string>
    <string name="ua_local">[Local] %1$s</string>
    <string name="ua_remote">[Remoto] %1$s</string>
    <string name="write_url">Escribe una URL o búsqueda...</string>
    <string name="exit">Salir</string>
    <string name="config">Ajustes</string>
    <string name="exts">Extensiones</string>
    <string name="history">Historial</string>
    <string name="tls_error">Existe un problema con el certificado de seguridad de este sitio web. ¿Deseas continuar de todos modos?</string>
    <string name="warnconsolejs">ADVERTENCIA: No ejecutes codigo si no sabes lo que hace, si el codigo lo encontraste en un  sitio raro podria ser malware!</string>
    <string name="send">Enviar</string>
    <string name="close">Cerrar</string>
    <string name="evaljs">Ejecutar JS</string>
    <string name="console">Consola</string>
    <string name="clear_history">Vaciar historial</string>
    <string name="no_history">No hay historial de navegación</string>
    <string name="del_history_item">Elemento eliminado del historial</string>
    <string name="history_cleared">Historial vaciado</string>
    <string name="view_code">Ver Código</string>
    <string name="start_downl">Iniciando Descarga...</string>
    <string name="error_downl">Error en descarga.</string>
    <string name="done_downl">Descarga completada: %1$s</string>
    <string name="confirm_downl">Descargar Archivo</string>
    <string name="downl_msg">¿Deseas descargar \"%1$s\" (%2$s)?</string>
    <string name="unk_size">Tamaño desconocido</string>
    <string name="search_exts">Buscar Extensiones</string>
    <string name="no_exts">No tienes Extensiones Añadidas</string>
    <string name="theme">Tema de Pagina</string>
    <string name="theme_light">Claro</string>
    <string name="theme_dark">Oscuro</string>
    <string name="theme_default">Según el sistema</string>
    <string name="add_search_engine">Añadir Motor de Búsqueda</string>
    <string name="limit_delete_search_engine">Debes mantener al menos 1 motor de búsqueda.</string>
    <string name="search_engine_deleted">Motor eliminado correctamente</string>
    <string name="search_engine_add">Añadir Motor de Búsqueda</string>
    <string name="search_engine_need_prefix" formatted="false">Nota: La URL debe contener el prefijo/comodín \'%s\' donde irá el texto buscado.</string>
    <string name="search_engine_name_ej">Nombre (ej. DuckDuckGo Lite)</string>
    <string name="search_engine_url_ej" formatted="false">URL con %s (ej. https://site.com/?q=%s)</string>
    <string name="save">Guardar</string>
    <string name="complet_create_search_engine">Completa todos los campos</string>
    <string name="error_no_prefix_search_engine" formatted="false">Error: La URL debe contener el comodín \'%s\'</string>
    <string name="search_engine_added">Motor añadido</string>
    <string name="home_page">Página Principal: </string>
    <string name="no_void_home_page">El campo no puede estar vacío</string>
    <string name="updated_home_page">Página de inicio actualizada</string>
    <string name="fdrepo">Repo F-Droid</string>
    <string name="github">Ver codigo en Github</string>
    <string name="license_info">Esta app esta bajo la Licencia MIT</string>
    <string name="credits_info">Hecho por Creadores Program para dispositivos Android</string>
    <string name="save_home">Guardar Página</string>
    <string name="deleted_ext">Extensión Eliminada</string>
    <string name="loadExt">Cargando Extensión %1$s...</string>
    <string name="loadedExt">Extensión %1$s Cargada</string>
    <string name="add_ext">Quieres añadir la extensión %1$s?</string>
    <string name="replace_ext">Quieres volver a añadir la extensión %1$s?</string>
    <string name="ext_saved">Extensión guardada y activadas</string>
    <string name="error_ext">Extensión Error</string>
    <string name="error_desc_ext">Ocurrio un error al Añadir la Extensión: %1$s</string>
</resources>
